Don't try to destroy child frames twice.  Bug 262244, r+sr=roc.